--- a/paper/header.tex
+++ b/paper/header.tex
@@ -1,12 +1,9 @@
 % **************GENERATED FILE, DO NOT EDIT**************
 
-\title{My JuliaCon proceeding}
+\title{Econometrics.jl}
 
-\author[1]{1st author}
-\author[1, 2]{2nd author}
-\author[2]{3rd author}
-\affil[1]{University}
-\affil[2]{National Lab}
+\author[]{José Bayoán Santiago Calderón}
+\affil[]{Social and Decision Analytics Division, Biocomplexity Institute and Initiative, University of Virginia}
 
-\keywords{Julia, Optimization, Game theory, Compiler}
+\keywords{Julia, Econometrics, Regression Analysis, Software Validation}
 
