--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -1,27 +1,666 @@
-@article{bezanson2017julia,
-  title={Julia: A fresh approach to numerical computing},
-  author={Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B},
-  journal={SIAM review},
-  volume={59},
-  number={1},
-  pages={65--98},
-  year={2017},
-  publisher={SIAM}
+@techreport{Abadie_Athey_Imbens_Wooldridge_2017,
+	author = {Abadie, Alberto and Athey, Susan and Imbens, Guido W. and Wooldridge, Jeffrey M.},
+	title = {When Should You Adjust Standard Errors for Clustering?},
+	institution = {National Bureau of Economic Research},
+	type = {Working Paper},
+	series = {Working Paper Series},
+	number = {24003},
+	year = {2017},
+	doi = {10.3386/w24003}
+}
+@article{Arellano_1987,
+	author = {Arellano, Manuel},
+	title = {Computing Robust Standard Errors for Within-groups Estimators},
+	journal =  {Oxford Bulletin of Economics and Statistics},
+	volume = {49},
+	pages = {431--434},
+	number = {4},
+	year = {1987},
+	doi = {10.1111/j.1468-0084.1987.mp49004006.x}
+}
+@article{Athey_Imbens_2016,
+	author = {Athey, Susan and Imbens, Guido W.},
+	title = {The Econometrics of Randomized Experiments},
+	journal =  {ArXiv e-prints},
+	archivePrefix = {arXiv},
+	eprint = {1607.00698},
+	primaryClass = {stat.ME},
+	keywords = {Statistics - Methodology, Economics - Econometrics, 62K99, G.3},
+	year = {2016},
+	url = {https://arxiv.org/abs/1607.00698}
+	}
+@book{Baltagi_2013,
+	location = {Chichester, West Sussex},
+	edition = {Fifth Edition},
+	title = {Econometric analysis of panel data},
+	isbn = {978-1-118-67232-7},
+	publisher = {John Wiley \& Sons, Inc},
+	author = {Baltagi, Badi H.},
+	date = {2013}
+}
+@article{Blinder_1973,
+	title = {Wage Discrimination: Reduced Form and Structural Estimates},
+	volume = {8},
+	issn = {0022166X},
+	doi = {10.2307/144855},
+	shorttitle = {Wage Discrimination},
+	pages = {436},
+	number = {4},
+	journal = {The Journal of Human Resources},
+	author = {Blinder, Alan S.},
+	date = {1973}
+}
+@article{Cameron_Gelbach_Miller_2011,
+    author = {Cameron, Adrian C. and Gelbach, Jonah B. and Miller, Douglas L.},
+    journal =  {Journal of Business \& Economic Statistics},
+    number = {2},
+    pages = {238--249},
+    publisher = {American Statistical Association},
+    title = {Robust Inference With Multiway Clustering},
+    volume = {29},
+    year = {2011},
+    doi = {10.2307/25800796}
+    }
+@article{Cameron_Miller_2015,
+	author = {Cameron, A. Colin and Miller, Douglas L.},
+	title = {A Practitioner's Guide to Cluster-Robust Inference},
+	journal = {Journal of Human Resources},
+	volume = {50},
+	pages = {317--372},
+	number = {2},
+	year = {2015},
+	doi = {10.3368/jhr.50.2.317}
+}
+@article{Card_Krueger_1992,
+	author = {Card, David and Krueger, Alan B.},
+	title = {School Quality and Black-White Relative Earnings: A Direct Assessment*},
+	journal = {The Quarterly Journal of Economics},
+	volume = {107},
+	number = {1},
+	pages = {151-200},
+	year = {1992},
+	doi = {10.2307/2118326}
+}
+@article{Dettori_Norvell_Skelly_Chapman_2011,
+	author = {Dettori, Joseph and Norvell, Daniel and Skelly, Andrea and Chapman, Jens},
+	title = {Heterogeneity of treatment effects: from ``How to treat'' to ``Whom to treat''},
+	volume = {2},
+	issn = {1663-7976, 1869-4136},
+	doi = {10.1055/s-0030-1267099},
+	shorttitle = {Heterogeneity of treatment effects},
+	pages = {7--10},
+	number = {2},
+	journal = {Evidence-Based Spine-Care Journal},
+	date = {2011-05},
+	langid = {english}
+}
+@article{Gibbons_SuarezSerrato_Urbancic_2018,
+	title = {Broken or Fixed Effects?},
+	journal = {Journal of Econometric Methods},
+	author = {Gibbons, Charles E. and Súarez Serrato, Juan Carlos and Urbancic, Michael B.},
+	year = {2018},
+	doi = {10.3386/w20342}
+	}
+@article{Liang_Zeger_1986,
+	author = {Liang, Kung-Yee and Zeger, Scott L.},
+	title = {Longitudinal data analysis using generalized linear models},
+	journal =  {Biometrika},
+	volume = {73},
+	pages = {13--22},
+	number = {1},
+	year = {1986},
+	doi = {10.1093/biomet/73.1.13}
 }
 
-@article{Moore1990,
-	author = {Moore, James T. and Bard, Jonathan F.},
-	doi = {10.1287/opre.38.5.911},
-	issn = {0030-364X},
-	journal = {Operations Research},
-	keywords = {games: noncooperative,integer: branch-and-bound algorithms,programming},
-	mendeley-groups = {bilevel - hierarchical},
-	month = {oct},
+@article{Rogers_1993,
+	author = {Rogers, William},
+	title = {Regression standard errors in clustered samples},
+	journal =  {Stata Technical	Bulletin},
+	volume = {13},
+	pages = {19--23},
+	number = {17},
+	year = {1993},
+	URL = {https://www.stata.com/products/stb/journals/stb13.pdf}
+}
+@inproceedings{Eicker_1967,
+	author = {Eicker, Friedhelm},
+	title = {Limit theorems for regressions with unequal and dependent errors},
+	Address = {Berkeley, California},
+	bookauthor = {Proceedings of the Fifth Berkeley Symposium on Mathematical Statistics and Probability, Volume 1: Statistics},
+	pages = {59--82},
+	Publisher = {University of California Press},
+	URL = {https://projecteuclid.org/euclid.bsmsp/1200512981},
+	year = {1967}
+}
+@inproceedings{Huber_1967,
+	author = {Huber, Peter J.},
+	title = {The behavior of maximum likelihood estimates under nonstandard conditions},
+	Address = {Berkeley, California},
+	title = {Proceedings of the Fifth Berkeley Symposium on Mathematical Statistics and Probability, Volume 1: Statistics},
+	pages = {221--233},
+	Publisher = {University of California Press},
+	URL = {https://projecteuclid.org/euclid.bsmsp/1200512988},
+	year = {1967}
+}
+@article{White_1980,
+	author = {White, Halbert L.},
+	title = {A Heteroskedasticity-Consistent Covariance Matrix Estimator and a Direct Test for Heteroskedasticity},
+	volume = {48},
+	pages = {817},
+	number = {4},
+	journal =  {Econometrica},
+	year = {1980},
+	doi = {10.2307/1912934}
+}
+@article{MacKinnon_White_1985,
+	author = {MacKinnon, James G. and White, Halbert L.},
+	title = {Some heteroskedasticity-consistent covariance matrix estimators with improved finite sample properties},
+	journal =  {Journal of Econometrics},
+	volume = {29},
+	pages = {305--325},
+	number = {3},
+	year = {1985},
+	doi = {10.1016/0304-4076(85)90158-7}
+}
+@article{Oaxaca_1973,
+	title = {Male-Female Wage Differentials in Urban Labor Markets},
+	volume = {14},
+	issn = {00206598},
+	doi = {10.2307/2525981},
+	pages = {693},
+	number = {3},
+	journal = {International Economic Review},
+	author = {Oaxaca, Ronald},
+	date = {1973-10}
+}
+@article{Solon_Haider_Wooldridge_2015,
+	author = {Solon, Gary and Haider, Steven J. and Wooldridge, Jeffrey M.},
+	title = {What Are We Weighting For?},
+	journal =  {Journal of Human Resources},
+	volume = {50},
+	number = {2},
+	pages = {301--316},
+	year = {2015},
+	doi = {10.3368/jhr.50.2.301}
+	}
+@article{Stapleton_Oseni_Bababekov_Hung_Chang_2018,
+	author = {Stapleton, SM and Oseni, TO and Bababekov, YJ and Hung, Y and Chang, DC},
+	title = {Race/ethnicity and age distribution of breast cancer diagnosis in the united states},
+	journal =  {{JAMA} Surgery},
+	year = {2018},
+	doi = {10.1001/jamasurg.2018.0035}
+	}
+@article{Stock_Watson_2008,
+	title = {Heteroskedasticity-Robust Standard Errors for Fixed Effects Panel Data Regression},
+	volume = {76},
+	doi = {10.1111/j.0012-9682.2008.00821.x},
+	pages = {155--174},
+	number = {1},
+	journal =  {Econometrica},
+	author = {Stock, James H. and Watson, Mark W.},
+	date = {2008-01},
+	langid = {english}
+}
+@book{Wooldridge_2010,
+	author = {Wooldridge, Jeffrey M.},
+	location = {Cambridge, Mass},
+	edition = {2nd ed},
+	title = {Econometric analysis of cross section and panel data},
+	isbn = {978-0-262-23258-6},
+	publisher = {MIT Press},
+	year = {2010}
+}
+@article{Xie_Brand_Jann_2012,
+	author = {Xie, Yu and Brand, Jennie E and Jann, Ben},
+	title = {Estimating Heterogeneous Treatment Effects with Observational Data},
+	volume = {42},
+	issn = {0081-1750, 1467-9531},
+	pages = {314--347},
+	number = {1},
+	journal = {Sociological methodology},
+	date = {2012-08}
+}
+@article{Yeh_Kramer_2017,
+	title = {Decision Tools to Improve Personalized Care in Cardiovascular Disease: Moving the Art of Medicine Toward Science},
+	volume = {135},
+	pages = {1097--1100},
+	number = {12},
+	journal = {Circulation},
+	author = {Yeh, Robert W. and Kramer, Daniel B.},
+	date = {2017-03-21},
+	doi = {10.1161/CIRCULATIONAHA.116.024247}
+}
+@misc{IPUMS,
+	title = {Integrated Public Use Microdata Series, Current Population Survey: Version 6.0},
+	url = {https://cps.ipums.org},
+	shorttitle = {Integrated Public Use Microdata Series, Current Population Survey},
+	publisher = {Minneapolis, {MN}: {IPUMS}},
+	author = {Flood, Sarah and King, Miriam and Rodgers, Renae and Ruggles, Steven and Warren, J. Robert},
+	date = {2018},
+	langid = {english},
+	doi = {10.18128/D030.V6.0},
+	note = {type: dataset}
+}
+% Second Chapter
+@article{AtheyImbens2016,
+	title = {Recursive partitioning for heterogeneous causal effects},
+	volume = {113},
+	issn = {0027-8424, 1091-6490},
+	doi = {10.1073/pnas.1510489113},
+	shorttitle = {Recursive partitioning for heterogeneous causal effects},
+	pages = {7353--7360},
+	number = {27},
+	journaltitle = {Proceedings of the National Academy of Sciences},
+	author = {Athey, Susan and Imbens, Guido W},
+	date = {2016-07-05},
+	langid = {english}
+}
+@article{AtheyImbens2017,
+	title = {The State of Applied Econometrics: Causality and Policy Evaluation},
+	volume = {31},
+	doi = {10.1257/jep.31.2.3},
+	shorttitle = {The State of Applied Econometrics},
+	pages = {3--32},
+	number = {2},
+	journaltitle = {Journal of Economic Perspectives},
+	author = {Athey, Susan and Imbens, Guido W},
+	date = {2017-05},
+	langid = {english}
+}
+@article{JBSC2019,
+	title = {On Cluster Robust Models},
+	author = {Santiago Calderón, José Bayoán},
+	date = {2019}
+}
+@article{WagerAthey2015,
+	author = {Wager, Stefan and Athey, Susan},
+	title = {Estimation and Inference of Heterogeneous Treatment Effects using Random Forests},
+	journal = {arXiv e-prints},
+	keywords = {Statistics - Methodology, Mathematics - Statistics Theory, Statistics - Machine Learning},
+	year = {2015},
+	eid = {arXiv:1510.04342},
+	archivePrefix = {arXiv},
+	eprint = {1510.04342},
+	primaryClass = {stat.ME},
+	adsurl = {https://ui.adsabs.harvard.edu/\#abs/2015arXiv151004342W}
+}
+@article{Peck2005,
+	author = {Peck, Laura R.},
+	title = {Using Cluster Analysis in Program Evaluation},
+	volume = {29},
+	doi = {10.1177/0193841X04266335},
+	pages = {178--196},
+	number = {2},
+	journaltitle = {Evaluation Review},
+	date = {2005-04},
+	langid = {english}
+}
+@article{BitlerGelbachHoynes2006,
+	title = {What Mean Impacts Miss: Distributional Effects of Welfare Reform Experiments},
+	volume = {96},
+	doi = {10.1257/aer.96.4.988},
+	shorttitle = {What Mean Impacts Miss},
+	pages = {988--1012},
+	number = {4},
+	journaltitle = {American Economic Review},
+	author = {Bitler, Marianne P and Gelbach, Jonah B and Hoynes, Hilary W},
+	date = {2006-08},
+	langid = {english}
+}
+@article{BitlerGelbachHoynes2017,
+	title = {Can Variation in Subgroups' Average Treatment Effects Explain Treatment Effect Heterogeneity? Evidence from a Social Experiment},
+	volume = {99},
+	issn = {0034-6535, 1530-9142},
+	doi = {10.1162/REST_a_00662},
+	shorttitle = {Can Variation in Subgroups' Average Treatment Effects Explain Treatment Effect Heterogeneity?},
+	pages = {683--697},
+	number = {4},
+	journaltitle = {The Review of Economics and Statistics},
+	author = {Bitler, Marianne P and Gelbach, Jonah B and Hoynes, Hilary W},
+	date = {2017-10},
+	langid = {english}
+}
+@TechReport{ListShaikhXu2016,
+	author = {List, John and Shaikh, Azeem and Xu, Yang},
+	title = {Multiple Hypothesis Testing in Experimental Economics},
+	year = {2016},
+	institution = {The Field Experiments Website},
+	type = {Artefactual Field Experiments},
+	url = {https://ideas.repec.org/p/feb/artefa/00402.html},
+	number={00402},
+}
+@misc{flood_integrated_2018,
+	title = {Integrated Public Use Microdata Series, Current Population Survey: Version 6.0},
+	shorttitle = {Integrated Public Use Microdata Series, Current Population Survey},
+	abstract = {{IPUMS}-{CPS} is dedicated to integrating and disseminating microdata from the Current Population Survey ({CPS}). The {CPS} is a monthly U.S. household survey conducted jointly by the U.S. Census Bureau and the Bureau of Labor Statistics. {IPUMS}-{CPS} contains harmonized data from every Annual Social and Economic Supplement ({ASEC}) supplement from 1962 to the present and all other supplements from 1976 to present. In addition to the many of the variables included in census data (race and ethnicity, education, income, occupation, industry, migration, disability, and veteran status), {IPUMS}-{CPS} includes additional information on work and income, such as participation in welfare programs, job searching, barriers to looking for work, union membership, hourly wages, health insurance, and tax liability. In addition, monthly supplements supplemental for certain years include information on computer and Internet use, displaced workers, fertility, food security, job tenure, tobacco use, volunteer activities, voter registration, and work schedules. {IPUMS}-{CPS} data are available through an online data access system free of charge to registered users at cps.ipums.org.},
+	publisher = {Minneapolis, {MN}: {IPUMS}},
+	author = {Flood, Sarah and King, Miriam and Rodgers, Renae and Ruggles, Steven and Warren, J. Robert},
+	date = {2018},
+	langid = {english},
+	doi = {10.18128/D030.V6.0},
+	note = {type: dataset}
+}
+@article{barrow_returns_2005,
+	title = {Do Returns to Schooling Differ by Race and Ethnicity?},
+	volume = {95},
+	issn = {0002-8282},
+	doi = {10.1257/000282805774670130},
+	pages = {83--87},
+	number = {2},
+	journaltitle = {American Economic Review},
+	author = {Barrow, Lisa and Rouse, Cecilia Elena},
+	date = {2005-04},
+	langid = {english}
+}
+@article{dougherty_why_2005,
+	title = {Why Are the Returns to Schooling Higher for Women than for Men?},
+	volume = {{XL}},
+	issn = {1548-8004},
+	doi = {10.3368/jhr.XL.4.969},
+	pages = {969--988},
+	number = {4},
+	journaltitle = {Journal of Human Resources},
+	author = {Dougherty, Christopher},
+	date = {2005},
+	langid = {english}
+}
+@article{Bezanson_Edelman_Karpinski_Shah_2017,
+	title = {Julia: A Fresh Approach to Numerical Computing},
+	volume = {59},
+	issn = {0036-1445, 1095-7200},
+	doi = {10.1137/141000671},
+	shorttitle = {Julia},
+	pages = {65--98},
+	number = {1},
+	journaltitle = {{SIAM} Review},
+	author = {Bezanson, Jeff and
+	          Edelman, Alan and
+	          Karpinski, Stefan and
+	          Shah, Viral B.},
+	date = {2017-01},
+	langid = {english}
+}
+% Third Chapter
+@book{Renfro_2009,
+	location = {Berlin, Heidelberg},
+	title = {The Practice of Econometric Theory},
+	volume = {44},
+	isbn = {978-3-540-75571-5},
+	series = {Advanced Studies in Theoretical and Applied Econometrics},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Renfro, Charles G.},
+	date = {2009},
+	doi = {10.1007/978-3-540-75571-5}
+}
+@article{Julia,
+	title = {Julia: A Fresh Approach to Numerical Computing},
+	volume = {59},
+	issn = {0036-1445, 1095-7200},
+	doi = {10.1137/141000671},
+	shorttitle = {Julia},
+	pages = {65--98},
+	number = {1},
+	journaltitle = {{SIAM} Review},
+	author = {Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B.},
+	date = {2017-01},
+	langid = {english}
+}
+@Manual{R,
+	title = {R: A Language and Environment for Statistical Computing},
+	author = {{R Core Team}},
+	organization = {R Foundation for Statistical Computing},
+	address = {Vienna, Austria},
+	year = {2018},
+	url = {https://www.R-project.org/},
+}
+@Manual{Stata,
+	title = {Stata Statistical Software: Release 15},
+	author = {StataCorp},
+	year = {2017},
+	location = {College Station, TX},
+	publisher = {StataCorp LLC}
+}
+@Manual{Python,
+	author = {{Python Software Foundation}},
+	title = {Python Software},
+	version = {Release 3.7},
+	year = {2018}
+}
+@article{OLeary_1990,
+	title = {Robust Regression Computation Using Iteratively Reweighted Least Squares},
+	volume = {11},
+	issn = {0895-4798, 1095-7162},
+	doi = {10.1137/0611032},
+	pages = {466--480},
+	number = {3},
+	journaltitle = {{SIAM} Journal on Matrix Analysis and Applications},
+	author = {O'Leary, Dianne P.},
+	urldate = {2018-09-10},
+	date = {1990-07},
+	langid = {english}
+}
+@article{FWL,
+	title = {Partial Time Regressions as Compared with Individual Trends},
+	volume = {1},
+	issn = {00129682},
+	doi = {10.2307/1907330},
+	pages = {387},
+	number = {4},
+	journaltitle = {Econometrica},
+	author = {Frisch, Ragnar and Waugh, Frederick V.},
+	date = {1933-10}
+}
+@article{FWLProof,
+	title = {A Simple Proof of the {FWL} Theorem},
+	volume = {39},
+	issn = {2152-4068},
+	doi = {10.3200/JECE.39.1.88-91},
+	pages = {88--91},
+	number = {1},
+	journaltitle = {The Journal of Economic Education},
+	author = {Lovell, Michael C.},
+	date = {2008-01},
+	langid = {english}
+}
+@TechReport {reghdfe,
+	Author = {Correia, Sergio},
+	Title = {Linear Models with High-Dimensional Fixed Effects: An Efficient and Feasible Estimator},
+	Note = {Working Paper},
+	Year = {2017},
+}
+@article{LSMR,
+	title = {{LSMR}: An Iterative Algorithm for Sparse Least-Squares Problems},
+	volume = {33},
+	issn = {1095-7197},
+	doi = {10.1137/10079687X},
+	shorttitle = {{LSMR}},
+	pages = {2950--2971},
 	number = {5},
-	pages = {911--921},
-	publisher = { INFORMS },
-	title = {{The Mixed Integer Linear Bilevel Programming Problem}},
-	url = {http://pubsonline.informs.org/doi/abs/10.1287/opre.38.5.911},
-	volume = {38},
-	year = {1990}
+	journaltitle = {{SIAM} Journal on Scientific Computing},
+	author = {Fong, David Chin-Lung and Saunders, Michael},
+	date = {2011-01},
+	langid = {english}
+}
+@article{SwamyArora,
+	title = {The Exact Finite Sample Properties of the Estimators of Coefficients in the Error Components Regression Models},
+	volume = {40},
+	issn = {00129682},
+	doi = {10.2307/1909405},
+	pages = {261},
+	number = {2},
+	journaltitle = {Econometrica},
+	author = {Swamy, P. A. V. B. and Arora, S. S.},
+	date = {1972-03}
+}
+@article{BV_1987,
+	author={Balestra, Pietro and Varadharajan-Krishnakumar, Jayalakshmi},
+	title={Full Information Estimations of a System of Simultaneous Equations with Error Component Structure},
+	volume={3},
+	DOI={10.1017/S0266466600010318},
+	number={2},
+	journal={Econometric Theory},
+	publisher={Cambridge University Press},
+	year={1987},
+	pages={223–246}
+}
+@article{BK_1977,
+	title = {Some stable methods for calculating inertia and solving symmetric linear systems},
+	volume = {31},
+	issn = {0025-5718},
+	doi = {10.1090/S0025-5718-1977-0428694-0},
+	pages = {163--163},
+	number = {137},
+	journaltitle = {Mathematics of Computation},
+	author = {Bunch, James R. and Kaufman, Linda},
+	date = {1977-01-01},
+	langid = {english}
+}
+@thesis{Konis_2007,
+	location = {Oxford, {UK}},
+	title = {Linear Programming Algorithms for Detecting Separated Data in Binary Logistic Regression Models},
+	institution = {Worcester College, University of Oxford},
+	type = {phdthesis},
+	author = {Konis, Kjell},
+	date = {2007}
+}
+@article{plm,
+	title = {Panel Data Econometrics in \textit{R} : The plm Package},
+	volume = {27},
+	issn = {1548-7660},
+	doi = {10.18637/jss.v027.i02},
+	shorttitle = {Panel Data Econometrics in \textit{R}},
+	number = {2},
+	journaltitle = {Journal of Statistical Software},
+	author = {Croissant, Yves and Millo, Giovanni},
+	date = {2008},
+	langid = {english}
+}
+@Manual{mlogit,
+	title = {mlogit: Multinomial Logit Models},
+	author = {Yves Croissant},
+	year = {2018},
+	note = {R package version 0.3-0},
+	url = {https://CRAN.R-project.org/package=mlogit},
+}
+@Book{MASS,
+	title = {Modern Applied Statistics with S},
+	author = {W. N. Venables and B. D. Ripley},
+	publisher = {Springer},
+	edition = {Fourth},
+	address = {New York},
+	year = {2002},
+	note = {ISBN 0-387-95457-0},
+	url = {https://www.stats.ox.ac.uk/pub/MASS4},
+}
+@Article{lmtest,
+	title = {Diagnostic Checking in Regression Relationships},
+	author = {Achim Zeileis and Torsten Hothorn},
+	journal = {R News},
+	year = {2002},
+	volume = {2},
+	number = {3},
+	pages = {7--10},
+	url = {https://CRAN.R-project.org/doc/Rnews/},
+}
+@Article{sandwich,
+	title = {Econometric Computing with {HC} and {HAC} Covariance
+	Matrix Estimators},
+	author = {Achim Zeileis},
+	journal = {Journal of Statistical Software},
+	year = {2004},
+	volume = {11},
+	number = {10},
+	pages = {1--17},
+	doi = {10.18637/jss.v011.i10},
+}
+@misc{LinearMixedModels,
+	author = {Bates, Douglas  and
+			  Santiago Calderón, José Bayoán and
+			  Kleinschmidt, Dave and
+			  Kelman, Tony and
+			  Babayan, Simon and
+			  Mogensen, Patrick Kofod and
+			  Piibeleht, Morten and
+			  Bouchet-Valat, Milan and
+			  Hatherly, Michael and
+			  Saba, Elliot and
+			  Baldassari, Antoine and
+			  Noack, Andreas},
+	title = {MixedModels.jl},
+	year = 2019,
+	url = {https://github.com/dmbates/MixedModels.jl},
+	doi = {10.5281/zenodo.2592615}
+}
+@Manual{Ecdat,
+	title = {Ecdat: Data Sets for Econometrics},
+	author = {Yves Croissant},
+	year = {2016},
+	note = {R package version 0.3-1},
+	url = {https://CRAN.R-project.org/package=Ecdat},
+}
+@article{ologit,
+	author = {McKelvey, Richard D. and Zavoina, William},
+	title = {A statistical model for the analysis of ordinal level dependent variables},
+	journal = {The Journal of Mathematical Sociology},
+	volume = {4},
+	number = {1},
+	pages = {103-120},
+	year  = {1975},
+	publisher = {Routledge},
+	doi = {10.1080/0022250X.1975.9989847}
+}
+@article{Optim,
+	title = {Optim: A mathematical optimization package for Julia},
+	volume = {3},
+	issn = {2475-9066},
+	doi = {10.21105/joss.00615},
+	shorttitle = {Optim},
+	pages = {615},
+	number = {24},
+	journaltitle = {Journal of Open Source Software},
+	author = {K Mogensen, Patrick and N Riseth, Asbjørn},
+	date = {2018-04-04}
+}
+@article{ForwardDiff,
+	author = {Revels, Jarrett  and
+	   				Lubin, Miles  and
+	   				Papamarkou, Theodore},
+	title     = {Forward-Mode Automatic Differentiation in Julia},
+	journal   = {CoRR},
+	volume    = {abs/1607.07892},
+	year      = {2016},
+	url       = {http://arxiv.org/abs/1607.07892},
+	archivePrefix = {arXiv},
+	eprint    = {1607.07892}
+}
+@misc{Singletons,
+	author = {Correia, Sergio},
+	title = {Singletons, cluster-robust standard errors and fixed effects: A bad mix},
+	institution = {Duke University},
+	year = {2015},
+	type = {Technical Note}
+}
+@article{Crime,
+ ISSN = {15309142},
+ doi = {10.2307/2109893},
+ abstract = {Previous attempts at estimating the economic model of crime with aggregate data relied heavily on cross-section econometric techniques, and therefore do not control for unobserved heterogeneity. This is even true of studies which estimated simultaneous equations models. Using a new panel dataset of North Carolina counties, we exploit both single and simultaneous equations panel data estimators to address two sources of endogeneity: unobserved heterogeneity and conventional simultaneity. Our results suggest that both labor market and criminal justice strategies are important in deterring crime, but that the effectiveness of law enforcement incentives has been greatly overstated.},
+ author = {Christopher Cornwell and William N. Trumbull},
+ journal = {The Review of Economics and Statistics},
+ number = {2},
+ pages = {360--366},
+ publisher = {The MIT Press},
+ title = {Estimating the Economic Model of Crime with Panel Data},
+ volume = {76},
+ year = {1994}
+}
+@article{Kakadu,
+	title = {Allowing for Zeros in Dichotomous-Choice Contingent-Valuation Models},
+	volume = {17},
+	issn = {07350015},
+	doi = {10.2307/1392405},
+	pages = {479},
+	number = {4},
+	journaltitle = {Journal of Business \& Economic Statistics},
+	author = {Werner, Megan},
+	date = {1999-10}
 }
