Updates from Overleaf

--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -250,7 +250,7 @@
 	shorttitle = {Recursive partitioning for heterogeneous causal effects},
 	pages = {7353--7360},
 	number = {27},
-	journaltitle = {Proceedings of the National Academy of Sciences},
+	journal = {Proceedings of the National Academy of Sciences},
 	author = {Athey, Susan and Imbens, Guido W},
 	date = {2016-07-05},
 	langid = {english}
@@ -262,7 +262,7 @@
 	shorttitle = {The State of Applied Econometrics},
 	pages = {3--32},
 	number = {2},
-	journaltitle = {Journal of Economic Perspectives},
+	journal = {Journal of Economic Perspectives},
 	author = {Athey, Susan and Imbens, Guido W},
 	date = {2017-05},
 	langid = {english}
@@ -291,7 +291,7 @@
 	doi = {10.1177/0193841X04266335},
 	pages = {178--196},
 	number = {2},
-	journaltitle = {Evaluation Review},
+	journal = {Evaluation Review},
 	date = {2005-04},
 	langid = {english}
 }
@@ -302,7 +302,7 @@
 	shorttitle = {What Mean Impacts Miss},
 	pages = {988--1012},
 	number = {4},
-	journaltitle = {American Economic Review},
+	journal = {American Economic Review},
 	author = {Bitler, Marianne P and Gelbach, Jonah B and Hoynes, Hilary W},
 	date = {2006-08},
 	langid = {english}
@@ -315,7 +315,7 @@
 	shorttitle = {Can Variation in Subgroups' Average Treatment Effects Explain Treatment Effect Heterogeneity?},
 	pages = {683--697},
 	number = {4},
-	journaltitle = {The Review of Economics and Statistics},
+	journal = {The Review of Economics and Statistics},
 	author = {Bitler, Marianne P and Gelbach, Jonah B and Hoynes, Hilary W},
 	date = {2017-10},
 	langid = {english}
@@ -347,7 +347,7 @@
 	doi = {10.1257/000282805774670130},
 	pages = {83--87},
 	number = {2},
-	journaltitle = {American Economic Review},
+	journal = {American Economic Review},
 	author = {Barrow, Lisa and Rouse, Cecilia Elena},
 	date = {2005-04},
 	langid = {english}
@@ -359,7 +359,7 @@
 	doi = {10.3368/jhr.XL.4.969},
 	pages = {969--988},
 	number = {4},
-	journaltitle = {Journal of Human Resources},
+	journal = {Journal of Human Resources},
 	author = {Dougherty, Christopher},
 	date = {2005},
 	langid = {english}
@@ -372,12 +372,12 @@
 	shorttitle = {Julia},
 	pages = {65--98},
 	number = {1},
-	journaltitle = {{SIAM} Review},
+	journal = {{SIAM} Review},
 	author = {Bezanson, Jeff and
 	          Edelman, Alan and
 	          Karpinski, Stefan and
 	          Shah, Viral B.},
-	date = {2017-01},
+	year = {2017},
 	langid = {english}
 }
 % Third Chapter
@@ -389,21 +389,8 @@
 	series = {Advanced Studies in Theoretical and Applied Econometrics},
 	publisher = {Springer Berlin Heidelberg},
 	author = {Renfro, Charles G.},
-	date = {2009},
+	year = {2009},
 	doi = {10.1007/978-3-540-75571-5}
-}
-@article{Julia,
-	title = {Julia: A Fresh Approach to Numerical Computing},
-	volume = {59},
-	issn = {0036-1445, 1095-7200},
-	doi = {10.1137/141000671},
-	shorttitle = {Julia},
-	pages = {65--98},
-	number = {1},
-	journaltitle = {{SIAM} Review},
-	author = {Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B.},
-	date = {2017-01},
-	langid = {english}
 }
 @Manual{R,
 	title = {R: A Language and Environment for Statistical Computing},
@@ -433,10 +420,10 @@
 	doi = {10.1137/0611032},
 	pages = {466--480},
 	number = {3},
-	journaltitle = {{SIAM} Journal on Matrix Analysis and Applications},
+	journal = {{SIAM} Journal on Matrix Analysis and Applications},
 	author = {O'Leary, Dianne P.},
 	urldate = {2018-09-10},
-	date = {1990-07},
+	year = {1990},
 	langid = {english}
 }
 @article{FWL,
@@ -446,9 +433,9 @@
 	doi = {10.2307/1907330},
 	pages = {387},
 	number = {4},
-	journaltitle = {Econometrica},
+	journal = {Econometrica},
 	author = {Frisch, Ragnar and Waugh, Frederick V.},
-	date = {1933-10}
+	year = {1933}
 }
 @article{FWLProof,
 	title = {A Simple Proof of the {FWL} Theorem},
@@ -457,14 +444,15 @@
 	doi = {10.3200/JECE.39.1.88-91},
 	pages = {88--91},
 	number = {1},
-	journaltitle = {The Journal of Economic Education},
+	journal = {The Journal of Economic Education},
 	author = {Lovell, Michael C.},
-	date = {2008-01},
+	year = {2008},
 	langid = {english}
 }
 @TechReport {reghdfe,
 	Author = {Correia, Sergio},
 	Title = {Linear Models with High-Dimensional Fixed Effects: An Efficient and Feasible Estimator},
+	institution = {Duke University},
 	Note = {Working Paper},
 	Year = {2017},
 }
@@ -476,9 +464,9 @@
 	shorttitle = {{LSMR}},
 	pages = {2950--2971},
 	number = {5},
-	journaltitle = {{SIAM} Journal on Scientific Computing},
+	journal = {{SIAM} Journal on Scientific Computing},
 	author = {Fong, David Chin-Lung and Saunders, Michael},
-	date = {2011-01},
+	year = {2011},
 	langid = {english}
 }
 @article{SwamyArora,
@@ -488,12 +476,12 @@
 	doi = {10.2307/1909405},
 	pages = {261},
 	number = {2},
-	journaltitle = {Econometrica},
+	journal = {Econometrica},
 	author = {Swamy, P. A. V. B. and Arora, S. S.},
-	date = {1972-03}
+	year = {1972}
 }
 @article{BV_1987,
-	author={Balestra, Pietro and Varadharajan-Krishnakumar, Jayalakshmi},
+	author = {Balestra, Pietro and Varadharajan-Krishnakumar, Jayalakshmi},
 	title={Full Information Estimations of a System of Simultaneous Equations with Error Component Structure},
 	volume={3},
 	DOI={10.1017/S0266466600010318},
@@ -510,18 +498,16 @@
 	doi = {10.1090/S0025-5718-1977-0428694-0},
 	pages = {163--163},
 	number = {137},
-	journaltitle = {Mathematics of Computation},
+	journal = {Mathematics of Computation},
 	author = {Bunch, James R. and Kaufman, Linda},
 	date = {1977-01-01},
 	langid = {english}
 }
-@thesis{Konis_2007,
-	location = {Oxford, {UK}},
+@phdthesis{Konis_2007,
 	title = {Linear Programming Algorithms for Detecting Separated Data in Binary Logistic Regression Models},
-	institution = {Worcester College, University of Oxford},
-	type = {phdthesis},
+	school = {Worcester College, University of Oxford},
 	author = {Konis, Kjell},
-	date = {2007}
+	year = {2007}
 }
 @article{plm,
 	title = {Panel Data Econometrics in \textit{R} : The plm Package},
@@ -530,9 +516,9 @@
 	doi = {10.18637/jss.v027.i02},
 	shorttitle = {Panel Data Econometrics in \textit{R}},
 	number = {2},
-	journaltitle = {Journal of Statistical Software},
+	journal = {Journal of Statistical Software},
 	author = {Croissant, Yves and Millo, Giovanni},
-	date = {2008},
+	year = {2008},
 	langid = {english}
 }
 @Manual{mlogit,
@@ -617,9 +603,9 @@
 	shorttitle = {Optim},
 	pages = {615},
 	number = {24},
-	journaltitle = {Journal of Open Source Software},
+	journal = {Journal of Open Source Software},
 	author = {K Mogensen, Patrick and N Riseth, Asbjørn},
-	date = {2018-04-04}
+	year = {2018}
 }
 @article{ForwardDiff,
 	author = {Revels, Jarrett  and
@@ -660,7 +646,7 @@
 	doi = {10.2307/1392405},
 	pages = {479},
 	number = {4},
-	journaltitle = {Journal of Business \& Economic Statistics},
+	journal = {Journal of Business \& Economic Statistics},
 	author = {Werner, Megan},
 	date = {1999-10}
 }
