--- a/paper/header.tex
+++ b/paper/header.tex
@@ -5,5 +5,5 @@
 \author[]{José Bayoán Santiago Calderón}
 \affil[]{Social and Decision Analytics Division, Biocomplexity Institute and Initiative, University of Virginia}
 
-\keywords{Julia, Econometrics, Regression Analysis, Panel Data, Generalized Linear Models, Discrete Choice Models, Instrumental Variables Estimation, Variable Absorption, Software Validation}
+\keywords{Julia, Econometrics, Regression Analysis, Generalized Linear Models, Discrete Choice Models, Instrumental Variables Estimation, Panel Data, Variable Absorption, Software Validation}
 
