--- a/paper/figures/fem.tex
+++ b/paper/figures/fem.tex
@@ -1,6 +1,7 @@
 \begin{table}[hbpt]
     \caption{Absorbing Panel or Panel and Temporal Indicators}
     \label{withinres}
+    \begin{threeparttable}
     \begin{tabularx}{\textwidth}{Y Y c c c c c c}
     \toprule
     Model & Parameter & \multicolumn{2}{c}{Econometrics.jl} & \multicolumn{2}{c}{Stata (reghdfe)} & \multicolumn{2}{c}{R (plm)} \\
@@ -16,4 +17,9 @@
     & PrbPris & -0.0070 & 0.0089 & -0.0070 & 0.0089 & -0.0069 & 0.0089 \\
     \bottomrule
     \end{tabularx}
+    \begin{tablenotes}
+        \footnotesize
+        \item Confidence intervals at the 95\% level using the observed information matrix variance covariance estimator.
+    \end{tablenotes}
+    \end{threeparttable}
 \end{table}
